Ip ranges vertical spacing fix
Closes-Bug:#1312662

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1399,6 +1399,8 @@ label.error {
   .network-attribute {
     min-height: 47px;
     .parameter-name { width: 185px; }
+    &.floating, &.ip-ranges {padding-bottom: 7px; }
+    label {margin-bottom: 0;}
   }
   input.mini { width: 91px; }
   .ip-ranges-control, .ranges-control {
